@@ -3,6 +3,11 @@
 	* device/include/mcs51/ser_ir.h, device/lib/ser_ir_cts_rts.c,
 	  device/lib/ser_ir.c, device/include/pic16/pic18fregs.h:
 	  sdcc library license changed to GPL+LE
+	* configure.in, configure, sdccconf_in.h, sdcc_vc_in.h:
+	  introduced NON_FREE_INCLUDE_DIR_SUFFIX and NON_FREE_LIB_DIR_SUFFIX
+	* src/SDCCmain.c, src/SDCCglobl.h:
+	  search / include non-free libraries and header files
+	* .version, doc/sdccman.lyx: bumped version to 2.9.8
 
 2010-10-02 Maarten Brock <sourceforge.brock AT dse.nl>
 
